fix: item page picture to aspect ration 1/1 and items page item price stock to align center

--- a/public/style/App.css
+++ b/public/style/App.css
@@ -616,6 +616,7 @@ button.secondary {
 .item-price-stock {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .itemPrice {
@@ -744,7 +745,7 @@ button.secondary {
 }
 .pictureGroup img {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1/1;
   background-size: cover;
   background-position: center;
 }
